2009-05-11  Paolo Bonzini  <bonzini@gnu.org>

PR tree-optimization/40026
	* gimplify.c (gimplify_init_constructor): Change initial conditional
	to assertion.  Rewrite TREE_OPERAND (*expr_p, 1) after
	optimize_compound_literals_in_ctor.

testsuite:
2009-05-11  Paolo Bonzini  <bonzini@gnu.org>

	* gcc.c-torture/compile/pr40026.c: New testcase.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@147386 138bc75d-0d04-0410-961f-82ee72b054a4